# Freelance

./: README.md
backend/: .gitignore  main.py  pyproject.toml  requirements.txt
backend/db/: database.py
backend/models/: project.py  user.py
backend/routes/: auth.py  projects.py
backend/schemas/: project.py  user.py
backend/services/: auth.py
frontend/: eslint.config.mjs  next.config.ts  package.json
frontend/src/: middleware.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/(auth)/sign-in/: page.tsx
frontend/src/app/(auth)/sign-up/: page.tsx
frontend/src/app/api/auth/[...nextauth]/: route.ts
frontend/src/app/api/uploadthing/: core.ts
frontend/src/app/profile/: page.tsx
frontend/src/app/profile/edit/: page.tsx
frontend/src/app/projects/: page.tsx
frontend/src/app/projects/[id]/: page.tsx
frontend/src/app/projects/new/: page.tsx
frontend/src/components/: Navbar.tsx  ProjectCard.tsx  SafeImage.tsx  ThemeProvider.tsx  UploadButton.tsx
frontend/src/lib/: api.ts  theme.ts  utils.ts
frontend/src/store/: authStore.ts  projectStore.ts
frontend/src/types/: next-auth.d.ts
